Fixing CSS px measurements, removing overflow and burger JS commented

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@ body{
 
     height: 100vh;
     width: 100vw;
+
+    overflow-y: hidden; /* Hide vertical scrollbar */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 header{
@@ -154,9 +157,9 @@ footer{
 /* Burger header icon and bars interactions that are making it */
 #burgerIcon {
 	cursor: pointer;
-	height: 27px;
-	width: 27px;
-	margin: 50px;
+	height: 1.6875em;
+	width: 1.6875em;
+	margin: 3.125em;
 	overflow: visible;
 	position: relative;
 	z-index: 2;
@@ -166,7 +169,7 @@ footer{
 	span:after {
 		background: black;
 		display: block;
-		height: 2px;
+		height: 0.125em;
 		opacity: 1;
 		position: absolute;
 		transition: 0.3s ease-in-out;
@@ -178,40 +181,40 @@ footer{
 	}
 
 	span:before {
-		left: 0px;
-		top: -10px;
-		width: 27px;
+		left: 0em;
+		top: -0.625em;
+		width: 1.6875em;
 	}
 
 	span {
-		right: 0px;
-		top: 13px;
-		width: 27px;
+		right: 0em;
+		top: 0.8125em;
+		width: 1.6875em;
 	}
 
 	span:after {
-		left: 0px;
-		top: 10px;
-		width: 27px;
+		left: 0em;
+		top: 0.625em;
+		width: 1.6875em;
 	}
 
 	&.close {
 		span:before {
-			top: 0px;
+			top: 0em;
 			transform: rotate(90deg);
-			width: 27px;
+			width: 1.6875em;
             background: white;
 		}
 
 		span {
 			transform: rotate(-45deg);
-			top: 13px;
-			width: 27px;
+			top: 0.8125em;
+			width: 1.6875em;
             background: white;
 		}
 
 		span:after {
-			top: 0px;
+			top: 0;
 			left: 0;
 			transform: rotate(90deg);
 			opacity: 0;
@@ -232,13 +235,13 @@ footer{
 	visibility: hidden;
 	opacity: 0;
 	text-align: center;
-	padding-top: 20px;
+	padding-top: 1.25em;
 	transition: all 0.3s ease-in-out;
 
 	&.overlay {
 		visibility: visible;
 		opacity: 1;
-		padding-top: 100px;
+		padding-top: 6.25em;
 		background: rgba(0, 0, 0, 0.5);
 	}
 
@@ -253,8 +256,8 @@ footer{
 	a {
 		color: #fff;
 		display: block;
-		font-size: 32px;
-		margin-bottom: 30px;
+		font-size: 2em;
+		margin-bottom: 1.875em;
 		text-decoration: none;
 	}
 }
